--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -44,7 +44,7 @@ footer{text-align:center;padding:24px;color:#64748b;}
 
 <!-- Hands-off block -->  
 <p class="micro-text">  
-Your response is helping shape solutions for real classrooms across Africa. To do this well, we need to know <strong>who every Founding Teacher is and where they teach</strong>. This helps us connect you with other teachers making change, and ensures your insights lead to real tools, training and support.  
+Your insight is shaping classroom solutions. Let’s make it actionable—tell us about yourself so we can connect you with fellow teachers driving change.  
 </p>  
 
 <form id="teacherForm">  
@@ -119,15 +119,15 @@ const webhook = "https://script.google.com/macros/s/AKfycbxKP-LUtdz_EiwdnpA25-D2
 
 const countries = {  
  Nigeria:{code:"+234",regions:["Abia","Adamawa","Akwa Ibom","Anambra","Bauchi","Bayelsa","Benue","Borno","Cross River","Delta","Ebonyi","Edo","Ekiti","Enugu","FCT","Gombe","Imo","Jigawa","Kaduna","Kano","Katsina","Kebbi","Kogi","Kwara","Lagos","Nasarawa","Niger","Ogun","Ondo","Osun","Oyo","Plateau","Rivers","Sokoto","Taraba","Yobe","Zamfara"]},  
- Kenya:{code:"+254",regions:["All Counties"]},  
- Ghana:{code:"+233",regions:["All Regions"]},  
- "South Africa":{code:"+27",regions:["All Provinces"]},  
- Ethiopia:{code:"+251",regions:["All Regions"]},  
- Uganda:{code:"+256",regions:["All Regions"]},  
- Tanzania:{code:"+255",regions:["All Regions"]},  
- Rwanda:{code:"+250",regions:["All Regions"]},  
- Egypt:{code:"+20",regions:["All Governorates"]},  
- Senegal:{code:"+221",regions:["All Regions"]}  
+ Kenya:{code:"+254",regions:["Baringo","Bomet","Bungoma","Busia","Elgeyo-Marakwet","Embu","Garissa","Homa Bay","Isiolo","Kajiado","Kakamega","Kericho","Kiambu","Kilifi","Kirinyaga","Kisii","Kisumu","Kitui","Kwale","Laikipia","Lamu","Machakos","Makueni","Mandera","Meru","Migori","Mombasa","Murang'a","Nairobi","Nakuru","Nandi","Narok","Nyamira","Nyandarua","Nyeri","Samburu","Siaya","Taita-Taveta","Tana River","Tharaka-Nithi","Trans-Nzoia","Turkana","Uasin Gishu","Vihiga","Wajir","West Pokot"]},  
+ Ghana:{code:"+233",regions:["Ahafo","Ashanti","Bono","Bono East","Central","Eastern","Greater Accra","North East","Northern","Oti","Savannah","Upper East","Upper West","Volta","Western","Western North"]},  
+ "South Africa":{code:"+27",regions:["Eastern Cape","Free State","Gauteng","KwaZulu-Natal","Limpopo","Mpumalanga","Northern Cape","North West","Western Cape"]},  
+ Ethiopia:{code:"+251",regions:["Addis Ababa","Afar","Amhara","Benishangul-Gumuz","Dire Dawa","Gambela","Harari","Oromia","Sidama","Somali","Southern Nations, Nationalities, and Peoples' Region","Tigray"]},  
+ Uganda:{code:"+256",regions:["Central","Eastern","Northern","Western"]},  
+ Tanzania:{code:"+255",regions:["Arusha","Dar es Salaam","Dodoma","Geita","Iringa","Kagera","Katavi","Kigoma","Kilimanjaro","Lindi","Manyara","Mara","Mbeya","Morogoro","Mtwara","Mwanza","Njombe","Pwani","Rukwa","Ruvuma","Shinyanga","Simiyu","Singida","Tabora","Tanga","Zanzibar North","Zanzibar South","Zanzibar West"]},  
+ Rwanda:{code:"+250",regions:["Kigali","Northern","Southern","Eastern","Western"]},  
+ Egypt:{code:"+20",regions:["Alexandria","Aswan","Beheira","Beni Suef","Cairo","Dakahlia","Damietta","Faiyum","Gharbia","Giza","Ismailia","Kafr El Sheikh","Luxor","Matruh","Minya","Monufia","New Valley","North Sinai","Port Said","Qalyubia","Qena","Red Sea","Sharqia","Sohag","South Sinai","Suez"]},  
+ Senegal:{code:"+221",regions:["Dakar","Diourbel","Fatick","Kaolack","Kaffrine","Kédougou","Kolda","Louga","Matam","Saint-Louis","Sédhiou","Tambacounda","Thiès","Ziguinchor"]}  
 };  
 
 const countrySel=document.getElementById("country");  
