--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </p>
       <p class="cta-text">
             If you're ready to help shape the future of learning;<br>
-            join us and add your voice by becoming a founding teacher.
+            add your voice and; become a <strong>Founding Teacher</strong>.
       </p>
       <a href="/alliance/intro/" class="btn">
         Join the Founding Teacher Alliance
