--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -1,165 +1,184 @@
-<!doctype html>  
-<html lang="en">  
-<head>  
-<meta charset="utf-8">  
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<title>Complete Your Profile — TichaAfrica</title>  
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Complete Your Profile — TichaAfrica</title>
 
-<meta name="description" content="Add your details to join the Founding Teacher Alliance.">  
+<meta name="description" content="Add your details to join the Founding Teacher Alliance.">
 
-<meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa">  
-<meta property="og:description" content="African teachers shaping the future of learning.">  
-<meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg">  
-<meta property="og:url" content="https://tichaafrica.com">  
-<meta property="og:type" content="website">  
+<meta property="og:title" content="TichaAfrica — Teachers Leading AI in Africa">
+<meta property="og:description" content="African teachers shaping the future of learning.">
+<meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg">
+<meta property="og:url" content="https://tichaafrica.com">
+<meta property="og:type" content="website">
 
-<link rel="icon" href="/favicon.ico">  
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">  
+<link rel="icon" href="/favicon.ico">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 
-<style>  
-*{margin:0;padding:0;box-sizing:border-box;}  
-body{font-family:'Inter',sans-serif;background:#f8f9fc;color:#0f172a;}  
-main{padding:24px;display:flex;justify-content:center;}  
-.container{max-width:720px;width:100%;}  
-.step{font-weight:600;color:#64748b;margin-bottom:16px;}  
-h1{font-size:clamp(2rem,6vw,3rem);color:#0d5c63;margin-bottom:20px;}  
-form{background:#fff;padding:32px;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.08);}  
-label{font-weight:700;margin-top:20px;display:block;margin-bottom:4px;}  
-input,select,textarea{width:100%;padding:14px;border-radius:10px;border:1px solid #cbd5e1;margin-bottom:20px;}  
-textarea{min-height:120px;}  
-.btn{margin-top:28px;width:100%;padding:18px;border:none;border-radius:999px;background:#0d5c63;color:#fff;font-size:1.1rem;font-weight:700;cursor:pointer;}  
-.btn:disabled{opacity:.6;cursor:not-allowed;}  
-footer{text-align:center;padding:24px;color:#64748b;}  
-.micro-text{font-size:0.95rem;line-height:1.5;color:#64748b;margin-bottom:16px;}  
-</style>  
-</head>  
+<style>
+*{margin:0;padding:0;box-sizing:border-box;}
+body{font-family:'Inter',sans-serif;background:#f8f9fc;color:#0f172a;}
+main{padding:24px;display:flex;justify-content:center;}
+.container{max-width:720px;width:100%;}
+.step{font-weight:600;color:#64748b;margin-bottom:16px;}
+h1{font-size:clamp(2rem,6vw,3rem);color:#0d5c63;margin-bottom:20px;}
+form{background:#fff;padding:32px;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.08);}
+label{font-weight:700;margin-top:20px;display:block;margin-bottom:4px;}
+input,select,textarea{width:100%;padding:14px;border-radius:10px;border:1px solid #cbd5e1;margin-bottom:20px;}
+textarea{min-height:120px;}
+.btn{margin-top:28px;width:100%;padding:18px;border:none;border-radius:999px;background:#0d5c63;color:#fff;font-size:1.1rem;font-weight:700;cursor:pointer;}
+.btn:disabled{opacity:.6;cursor:not-allowed;}
+footer{text-align:center;padding:24px;color:#64748b;}
+.micro-text{font-size:0.95rem;line-height:1.5;color:#64748b;margin-bottom:16px;}
+</style>
+</head>
 
-<body>  
+<body>
 
-<main>  
-<div class="container">  
+<main>
+<div class="container">
 
-<div class="step">Step 3 of 3 — Your Details</div>  
-<h1>You’re helping shape real classroom solutions</h1>  
+<div class="step">Step 3 of 3 — Your Details</div>
+<h1>You're helping shape real classroom solutions</h1>
 
-<!-- Hands-off block -->  
-<p class="micro-text">  
-Your insight is shaping classroom solutions. Let’s make it actionable—tell us about yourself so we can connect you with fellow teachers driving change.  
-</p>  
+<p class="micro-text">
+Your insight is shaping classroom solutions. Let's make it actionable—tell us about yourself so we can connect you with fellow teachers driving change.
+</p>
 
-<form id="teacherForm">  
+<form
+  id="teacherForm"
+  name="Founding Teacher Alliance"
+  method="POST"
+  data-netlify="true"
+  netlify-honeypot="bot-field"
+>
 
-<p class="micro-text">  
-Start by telling us your name; it lets us recognise your contribution and connect you with fellow Founding Teachers.  
-</p>  
-<label>Full name</label>  
-<input name="fullName" placeholder="e.g. Aisha Mohammed" required>  
+<input type="hidden" name="form-name" value="Founding Teacher Alliance">
+<input type="hidden" name="submissionType" value="Alliance Profile">
 
-<p class="micro-text">  
-Let us know your school type; this helps us understand different classroom environments across regions.  
-</p>  
-<label>School type</label>  
-<select name="schoolType" required>  
-  <option value="">Select</option>  
-  <option>Rural</option>  
-  <option>Urban</option>  
-  <option>Peri-urban</option>  
-</select>  
+<p class="micro-text">
+Start by telling us your name; it lets us recognise your contribution and connect you with fellow Founding Teachers.
+</p>
+<label>Full name</label>
+<input name="fullName" placeholder="e.g. Aisha Mohammed" required>
 
-<p class="micro-text">  
-Choosing your country ensures your classroom insights are placed on the right map so they reach the right teachers and programmes.  
-</p>  
-<label>Country</label>  
-<select id="country" name="country" required></select>  
+<p class="micro-text">
+Let us know your school type; this helps us understand different classroom environments across regions.
+</p>
+<label>School type</label>
+<select name="schoolType" required>
+  <option value="">Select</option>
+  <option>Rural</option>
+  <option>Urban</option>
+  <option>Peri-urban</option>
+</select>
 
-<p class="micro-text">  
-Select your region/state; this helps place your classroom in the right local context for meaningful insights.  
-</p>  
-<label>Region / State / Province</label>  
-<select id="region" name="regionState" required></select>  
+<p class="micro-text">
+Choosing your country ensures your classroom insights are placed on the right map so they reach the right teachers and programmes.
+</p>
+<label>Country</label>
+<select id="country" name="country" required>
+  <option value="">Tap to select</option>
+</select>
 
-<p class="micro-text">  
-Share your local area or district so we can connect teachers in your immediate community. This keeps your contribution precise and actionable.  
-</p>  
-<label>Local government / District</label>  
-<input name="localGovt" placeholder="e.g. Ikeja LGA, Lagos State">  
+<p class="micro-text">
+Select your region/state; this helps place your classroom in the right local context for meaningful insights.
+</p>
+<label>Region / State / Province</label>
+<select id="region" name="regionState" required>
+  <option value="">Tap to select</option>
+</select>
 
-<p class="micro-text">  
-Let us know what subject and level you teach. This ensures your classroom challenges guide the right resources and training.  
-</p>  
-<label>Subject & Level</label>  
-<input name="subjectLevel" placeholder="e.g. Mathematics (Primary 4–6)" required>  
+<p class="micro-text">
+Share your local area or district so we can connect teachers in your immediate community. This keeps your contribution precise and actionable.
+</p>
+<label>Local government / District</label>
+<input name="localGovt" placeholder="e.g. Ikeja LGA, Lagos State">
 
-<p class="micro-text">  
-Add your WhatsApp number. We use it to keep you updated and connected with other founding teachers. Your number is private and secure.  
-</p>  
-<label>WhatsApp</label>  
-<div style="display:flex;gap:8px">  
-  <select id="code"></select>  
-  <input id="whatsapp" name="whatsapp" placeholder="+234 701 234 5678" required>  
-</div>  
+<p class="micro-text">
+Let us know what subject and level you teach. This ensures your classroom challenges guide the right resources and training.
+</p>
+<label>Subject & Level</label>
+<input name="subjectLevel" placeholder="e.g. Mathematics (Primary 4–6)" required>
 
-<p class="micro-text">  
-Optional: share your email for updates and insights. It’s another way to stay informed and connected.  
-</p>  
-<label>Email (optional)</label>  
-<input type="email" name="email" placeholder="your.email@example.com">  
+<p class="micro-text">
+Add your WhatsApp number. We use it to keep you updated and connected with other founding teachers. Your number is private and secure.
+</p>
+<label>WhatsApp</label>
+<div style="display:flex;gap:8px">
+  <select id="code"></select>
+  <input id="whatsapp" placeholder="7012345678" required>
+</div>
 
-<button class="btn" id="submitBtn">Unlock your badge and join teachers shaping real classroom tools →</button>  
+<p class="micro-text">
+Optional: share your email for updates and insights. It's another way to stay informed and connected.
+</p>
+<label>Email (optional)</label>
+<input type="email" name="email" placeholder="your.email@example.com">
 
-</form>  
+<button class="btn" id="submitBtn">
+Unlock your badge and join teachers shaping real classroom tools →
+</button>
 
-</div>  
-</main>  
+</form>
 
-<footer>© 2025 TichaAfrica • Teach Smart. Lead Change.</footer>  
+</div>
+</main>
 
-<script>  
-const webhook = "https://script.google.com/macros/s/AKfycbxKP-LUtdz_EiwdnpA25-D2oeVaHsMmxRB0lO9OtT5_XypRDsYcXEFi05jV8Y6W4Hwd/exec";  
+<footer>© 2025 TichaAfrica • Teach Smart. Lead Change.</footer>
 
-const countries = {  
- Nigeria:{code:"+234",regions:["Abia","Adamawa","Akwa Ibom","Anambra","Bauchi","Bayelsa","Benue","Borno","Cross River","Delta","Ebonyi","Edo","Ekiti","Enugu","FCT","Gombe","Imo","Jigawa","Kaduna","Kano","Katsina","Kebbi","Kogi","Kwara","Lagos","Nasarawa","Niger","Ogun","Ondo","Osun","Oyo","Plateau","Rivers","Sokoto","Taraba","Yobe","Zamfara"]},  
- Kenya:{code:"+254",regions:["Baringo","Bomet","Bungoma","Busia","Elgeyo-Marakwet","Embu","Garissa","Homa Bay","Isiolo","Kajiado","Kakamega","Kericho","Kiambu","Kilifi","Kirinyaga","Kisii","Kisumu","Kitui","Kwale","Laikipia","Lamu","Machakos","Makueni","Mandera","Meru","Migori","Mombasa","Murang'a","Nairobi","Nakuru","Nandi","Narok","Nyamira","Nyandarua","Nyeri","Samburu","Siaya","Taita-Taveta","Tana River","Tharaka-Nithi","Trans-Nzoia","Turkana","Uasin Gishu","Vihiga","Wajir","West Pokot"]},  
- Ghana:{code:"+233",regions:["Ahafo","Ashanti","Bono","Bono East","Central","Eastern","Greater Accra","North East","Northern","Oti","Savannah","Upper East","Upper West","Volta","Western","Western North"]},  
- "South Africa":{code:"+27",regions:["Eastern Cape","Free State","Gauteng","KwaZulu-Natal","Limpopo","Mpumalanga","Northern Cape","North West","Western Cape"]},  
- Ethiopia:{code:"+251",regions:["Addis Ababa","Afar","Amhara","Benishangul-Gumuz","Dire Dawa","Gambela","Harari","Oromia","Sidama","Somali","Southern Nations, Nationalities, and Peoples' Region","Tigray"]},  
- Uganda:{code:"+256",regions:["Central","Eastern","Northern","Western"]},  
- Tanzania:{code:"+255",regions:["Arusha","Dar es Salaam","Dodoma","Geita","Iringa","Kagera","Katavi","Kigoma","Kilimanjaro","Lindi","Manyara","Mara","Mbeya","Morogoro","Mtwara","Mwanza","Njombe","Pwani","Rukwa","Ruvuma","Shinyanga","Simiyu","Singida","Tabora","Tanga","Zanzibar North","Zanzibar South","Zanzibar West"]},  
- Rwanda:{code:"+250",regions:["Kigali","Northern","Southern","Eastern","Western"]},  
- Egypt:{code:"+20",regions:["Alexandria","Aswan","Beheira","Beni Suef","Cairo","Dakahlia","Damietta","Faiyum","Gharbia","Giza","Ismailia","Kafr El Sheikh","Luxor","Matruh","Minya","Monufia","New Valley","North Sinai","Port Said","Qalyubia","Qena","Red Sea","Sharqia","Sohag","South Sinai","Suez"]},  
- Senegal:{code:"+221",regions:["Dakar","Diourbel","Fatick","Kaolack","Kaffrine","Kédougou","Kolda","Louga","Matam","Saint-Louis","Sédhiou","Tambacounda","Thiès","Ziguinchor"]}  
-};  
+<script>
+const webhook="https://script.google.com/macros/s/AKfycbxKP-LUtdz_EiwdnpA25-D2oeVaHsMmxRB0lO9OtT5_XypRDsYcXEFi05jV8Y6W4Hwd/exec";
 
-const countrySel=document.getElementById("country");  
-const regionSel=document.getElementById("region");  
-const codeSel=document.getElementById("code");  
+const countries={
+  Nigeria:{code:"+234",regions:["Abia","Adamawa","Akwa Ibom","Anambra","Bauchi","Bayelsa","Benue","Borno","Cross River","Delta","Ebonyi","Edo","Ekiti","Enugu","FCT","Gombe","Imo","Jigawa","Kaduna","Kano","Katsina","Kebbi","Kogi","Kwara","Lagos","Nasarawa","Niger","Ogun","Ondo","Osun","Oyo","Plateau","Rivers","Sokoto","Taraba","Yobe","Zamfara"]},
+  Kenya:{code:"+254",regions:["Baringo","Bomet","Bungoma","Busia","Elgeyo-Marakwet","Embu","Garissa","Homa Bay","Isiolo","Kajiado","Kakamega","Kericho","Kiambu","Kilifi","Kirinyaga","Kisii","Kisumu","Kitui","Kwale","Laikipia","Lamu","Machakos","Makueni","Mandera","Meru","Migori","Mombasa","Murang'a","Nairobi","Nakuru","Nandi","Narok","Nyamira","Nyandarua","Nyeri","Samburu","Siaya","Taita-Taveta","Tana River","Tharaka-Nithi","Trans-Nzoia","Turkana","Uasin Gishu","Vihiga","Wajir","West Pokot"]},
+  Ghana:{code:"+233",regions:["Ahafo","Ashanti","Bono","Bono East","Central","Eastern","Greater Accra","North East","Northern","Oti","Savannah","Upper East","Upper West","Volta","Western","Western North"]},
+  "South Africa":{code:"+27",regions:["Eastern Cape","Free State","Gauteng","KwaZulu-Natal","Limpopo","Mpumalanga","Northern Cape","North West","Western Cape"]},
+  Ethiopia:{code:"+251",regions:["Addis Ababa","Afar","Amhara","Benishangul-Gumuz","Dire Dawa","Gambela","Harari","Oromia","Sidama","Somali","Southern Nations, Nationalities, and Peoples' Region","Tigray"]},
+  Uganda:{code:"+256",regions:["Central","Eastern","Northern","Western"]},
+  Tanzania:{code:"+255",regions:["Arusha","Dar es Salaam","Dodoma","Geita","Iringa","Kagera","Katavi","Kigoma","Kilimanjaro","Lindi","Manyara","Mara","Mbeya","Morogoro","Mtwara","Mwanza","Njombe","Pwani","Rukwa","Ruvuma","Shinyanga","Simiyu","Singida","Tabora","Tanga","Zanzibar North","Zanzibar South","Zanzibar West"]},
+  Rwanda:{code:"+250",regions:["Kigali","Northern","Southern","Eastern","Western"]},
+  Egypt:{code:"+20",regions:["Alexandria","Aswan","Beheira","Beni Suef","Cairo","Dakahlia","Damietta","Faiyum","Gharbia","Giza","Ismailia","Kafr El Sheikh","Luxor","Matruh","Minya","Monufia","New Valley","North Sinai","Port Said","Qalyubia","Qena","Red Sea","Sharqia","Sohag","South Sinai","Suez"]},
+  Senegal:{code:"+221",regions:["Dakar","Diourbel","Fatick","Kaolack","Kaffrine","Kédougou","Kolda","Louga","Matam","Saint-Louis","Sédhiou","Tambacounda","Thiès","Ziguinchor"]}
+};
 
-Object.keys(countries).forEach(c=>{  
-  countrySel.add(new Option(c,c));  
-});  
+const countrySel=document.getElementById("country");
+const regionSel=document.getElementById("region");
+const codeSel=document.getElementById("code");
 
-countrySel.onchange=()=>{  
-  regionSel.innerHTML="";  
-  codeSel.innerHTML="";  
-  const c=countries[countrySel.value];  
-  codeSel.add(new Option(c.code,c.code));  
-  c.regions.forEach(r=>regionSel.add(new Option(r,r)));  
-};  
+Object.keys(countries).forEach(c=>countrySel.add(new Option(c,c)));
 
-document.getElementById("teacherForm").onsubmit=async e=>{  
-  e.preventDefault();  
-  const btn=document.getElementById("submitBtn");  
-  btn.disabled=true;  
+countrySel.onchange=()=>{
+  regionSel.innerHTML='<option value="">Tap to select</option>';
+  codeSel.innerHTML="";
+  const c=countries[countrySel.value];
+  if(c){
+    codeSel.add(new Option(c.code,c.code));
+    c.regions.forEach(r=>regionSel.add(new Option(r,r)));
+  }
+};
 
-  const data=new FormData(e.target);  
-  data.set("whatsapp",codeSel.value+document.getElementById("whatsapp").value);  
-  data.append("submissionType","Alliance Profile");  
-  data.append("timestamp",new Date().toISOString());  
+document.getElementById("teacherForm").addEventListener("submit",async e=>{
+  e.preventDefault();
+  const btn=document.getElementById("submitBtn");
+  btn.disabled=true;
 
-  await fetch(webhook,{method:"POST",body:data});  
-  window.location.href="/alliance/thank-you/";  
-};  
-</script>  
+  const form=e.target;
+  const data=new FormData(form);
 
-</body>  
+  const cleanPhone=document.getElementById("whatsapp").value.replace(/\D/g,"");
+  data.set("whatsapp",codeSel.value+cleanPhone);
+
+  ["fullName","schoolType","country","regionState","localGovt","subjectLevel","whatsapp","email","submissionType"]
+    .forEach(f=>{ if(!data.has(f)) data.append(f,""); });
+
+  fetch(webhook,{method:"POST",body:data}).catch(()=>{});
+
+  form.submit();
+});
+</script>
+
+</body>
 </html>
