--- a/alliance/insight/index.html
+++ b/alliance/insight/index.html
@@ -12,8 +12,6 @@
   <meta property="og:image" content="https://tichaafrica.com/assets/images/og-image.jpg" />
   <meta property="og:url" content="https://tichaafrica.com" />
   <meta property="og:type" content="website" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
 
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -29,9 +27,7 @@
     form{background:#fff;padding:32px;border-radius:16px;box-shadow:0 10px 30px rgba(15,23,42,.08);text-align:left;margin:32px 0;border-left:6px solid #0d5c63;}
     label{font-weight:700;font-size:1.15rem;margin-bottom:12px;display:block;}
     textarea{width:100%;min-height:160px;padding:16px;font-size:1.1rem;border-radius:12px;border:1px solid #cbd5e1;margin-bottom:24px;}
-    textarea:focus{outline:none;border-color:#0d5c63;box-shadow:0 0 0 4px rgba(13,92,99,.1);}
     .btn{width:100%;padding:18px;background:#0d5c63;color:#fff;font-weight:700;font-size:1.2rem;border-radius:999px;border:none;cursor:pointer;}
-    footer{padding:32px 20px;text-align:center;font-size:.9rem;color:#64748b;}
   </style>
 </head>
 
@@ -50,7 +46,7 @@
       <p>No policy document or foreign app can replace what you know.</p>
     </div>
 
-    <form id="insightForm" name="teacher-insight">
+    <form id="insightForm">
       <label for="insight">
         As a teacher, what’s one real challenge in your classroom today that the right tools — designed by teachers like you — could fix?
       </label>
@@ -58,7 +54,6 @@
       <textarea
         id="insight"
         name="insight"
-        rows="6"
         placeholder="Be honest. Your experience matters. Write in any language."
         required></textarea>
 
@@ -74,30 +69,33 @@
 </footer>
 
 <script>
-const form = document.getElementById('insightForm');
-const button = document.getElementById('submitBtn');
-let submitted = false;
+const webhook = "https://script.google.com/macros/s/AKfycbxKP-LUtdz_EiwdnpA25-D2oeVaHsMmxRB0lO9OtT5_XypRDsYcXEFi05jV8Y6W4Hwd/exec";
 
-form.addEventListener('submit', async (e) => {
+const form = document.getElementById("insightForm");
+const button = document.getElementById("submitBtn");
+
+form.addEventListener("submit", async (e) => {
   e.preventDefault();
 
-  if (submitted) return;
-
-  const insight = document.getElementById('insight').value.trim();
+  const insight = document.getElementById("insight").value.trim();
   if (!insight) return;
 
-  submitted = true;
   button.disabled = true;
   button.textContent = "Submitting…";
 
-  await fetch("https://script.google.com/macros/s/AKfycbxKP-LUtdz_EiwdnpA25-D2oeVaHsMmxRB0lO9OtT5_XypRDsYcXEFi05jV8Y6W4Hwd/exec", {
+  // ✅ Persist insight for Step 3
+  sessionStorage.setItem("tichaInsight", insight);
+
+  // ✅ Send to webhook
+  fetch(webhook, {
     method: "POST",
     body: new URLSearchParams({
       submissionType: "Insight",
       insight: insight
     })
-  });
+  }).catch(()=>{});
 
+  // ➡️ Continue flow
   window.location.href = "/alliance/data/";
 });
 </script>
