--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -61,7 +61,7 @@ Your insight is shaping classroom solutions. Let's make it actionable—tell us 
 Start by telling us your name; it lets us recognise your contribution and connect you with fellow Founding Teachers.
 </p>
 <label>Full name</label>
-<input name="fullName" placeholder="e.g. Aisha Mohammed" required>
+<input name="fullName" placeholder="e.g. Aisha Odinga" required>
 
 <p class="micro-text">
 Let us know your school type; this helps us understand different classroom environments across regions.
@@ -94,7 +94,7 @@ Select your region/state; this helps place your classroom in the right local con
 Share your local area or district so we can connect teachers in your immediate community. This keeps your contribution precise and actionable.
 </p>
 <label>Local government / District</label>
-<input name="localGovt" placeholder="e.g. Ikeja LGA, Lagos State">
+<input name="localGovt" placeholder="e.g. Nsukka LGA,">
 
 <p class="micro-text">
 Let us know what subject and level you teach. This ensures your classroom challenges guide the right resources and training.
@@ -143,7 +143,7 @@ Unlock your badge and join teachers shaping real classroom tools →
 </div>
 </main>
 
-<footer>© 2025 TichaAfrica • Teach Smart. Lead Change.</footer>
+<footer>© 2026 TichaAfrica • Teach Smart. Lead Change.</footer>
 
 <script>
 const webhook="https://script.google.com/macros/s/AKfycbxJapUiUAbM9scEQa5IatRR7-_Poj6bTmjEsNxVSVmu5PNrjkMjlkI_ygjHDS-UWrnj/exec";
