--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -115,7 +115,7 @@ Add your WhatsApp number. We use it to keep you updated and connected with other
 Optional: share your email for updates and insights. It's another way to stay informed and connected.
 </p>
 <label>Email (optional)</label>
-<input type="email" name="email" placeholder="your.email@example.com">
+<input type="email" name="email" placeholder="aishaodinga@example.com">
 
 <p class="micro-text">
 Help us understand how you found TichaAfrica so we can reach more teachers like you.
