--- a/alliance/data/index.html
+++ b/alliance/data/index.html
@@ -39,7 +39,7 @@ footer{text-align:center;padding:24px;color:#64748b;}
 <main>
 <div class="container">
 
-<div class="step">Step 3 of 3 — Your Details</div>
+<div class="step">Step 3 of 3 — Complete Your Profile</div>
 <h1>You're helping shape real classroom solutions</h1>
 
 <p class="micro-text">
