--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </p>
       
       <p>
-        Our experience, our challenges, our ideas; they matter more than any imported solution.
+        Our experiences, our challenges, our ideas; they matter more than any imported solution.
       </p>
       
       <div class="cta-container">
