--- a/index.html
+++ b/index.html
@@ -60,13 +60,18 @@ main{
   margin:auto;
 }
 
+/* LOGO — fully blended */
 .logo{
   text-align:center;
   margin-bottom:70px;
+  opacity:0.95;
 }
 
 .logo img{
   height:110px;
+  background:transparent;
+  display:block;
+  margin:auto;
 }
 
 /* HERO */
@@ -215,7 +220,7 @@ footer{
 <main>
 
 <div class="logo fade-up">
-  <img src="/assets/images/Logo1.jpg" alt="TichaAfrica">
+  <img src="/assets/images/logo-transparent.png" alt="TichaAfrica">
 </div>
 
 <section class="hero fade-up">
