--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ footer{
 <main>
 
 <div class="logo fade-up">
-  <img src="/assets/images/logo1.png" alt="TichaAfrica">
+  <img src="/assets/images/logo1.jpg" alt="TichaAfrica">
 </div>
 
 <section class="hero fade-up">
